overflow fixed

--- a/src/Styles/NewInstancesPage.scss
+++ b/src/Styles/NewInstancesPage.scss
@@ -12,7 +12,7 @@
     height: 100%;
 
     .dataSection {
-      //overflow-y: auto;
+      overflow-y: auto;
       height: 100%;
       width: 100%;
       background-color: rgba($color: #000000, $alpha: 0.5);
