--- a/src/Styles/monitoringData.scss
+++ b/src/Styles/monitoringData.scss
@@ -15,7 +15,7 @@
     min-height: 100%;
     height: fit-content;
 
-    .downloads{
+    .downloads {
       position: absolute;
       bottom: 125px;
       left: 40px;
@@ -160,6 +160,7 @@
     .row {
       cursor: pointer;
       margin-bottom: 2px;
+      font-size: 5px !important;
     }
     .row:hover {
       box-shadow: 1px 1px 5px #60606020;
